# staunchpad

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: app_demo.py  detect.py  dispatcher.py  hello_lights.py  prompt_console.py  scene_recall.py  soundboard.py  ui.py
launchpad/: __init__.py  cli.py  color.py  device.py  layout.py  protocol.py  scenes.py  widgets.py
staunchpad/: __init__.py  animations.py  cli.py  color.py  console.py  device.py  dispatch.py  layout.py  protocol.py  webui.py  widgets.py
staunchpad/static/: index.html
tests/: test_color.py  test_dispatch.py  test_layout.py  test_protocol.py
