[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "launchpad-controller"
version = "0.1.0"
description = "A programming interface for the legacy Novation Launchpad (original / S / Mini)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mido>=1.3",
    "python-rtmidi>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["launchpad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
