[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "staunchpad"
version = "0.1.0"
description = "Drive a Novation Launchpad MK2 from Python: RGB, flash/pulse, events, scenes."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "kblflivingston" }]
keywords = ["launchpad", "novation", "midi", "controller", "led", "grid", "music"]
dependencies = [
    "mido>=1.3",
    "python-rtmidi>=1.5",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/kblflivingston/staunchpad"
Repository = "https://github.com/kblflivingston/staunchpad"
Issues = "https://github.com/kblflivingston/staunchpad/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
staunchpad-detect = "staunchpad.cli:main"

[tool.setuptools]
packages = ["staunchpad"]

[tool.setuptools.package-data]
staunchpad = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
